--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "~1.4.5",
+    "cors": "^2.8.5",
+    "debug": "~4.1.1",
+    "decimal.js": "^10.2.0",
+    "dotenv": "^8.2.0",
+    "ejs": "~3.1.2",
+    "express": "~4.17.1",
+    "express-jwt": "^5.3.3",
+    "http-errors": "~1.7.3",
+    "morgan": "~1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "nodemon": "^2.0.3",
+    "qiniu": "^7.3.1",
+    "request": "^2.88.2",
+    "sequelize": "^5.21.8",
+    "tenpay": "^2.1.18"
   }
 }
